Theme.liquid testing

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -279,6 +279,8 @@
 
     {% sections 'header-group' %}
 
+    <h1 style="text-align:center; background: gold; padding:10px;">Hey user, welcome to the store!</h2>
+
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
     </main>
