--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -279,7 +279,7 @@
 
     {% sections 'header-group' %}
 
-    <h1 style="text-align:center; background: gold; padding:5px; border-radius:10px;">Hey john, welcome to the store!</h2>
+    <h1 style="text-align:center; background: gold; padding:5px; border-radius:10px;">Hey john!!, welcome to the store!</h2>
 
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
